# java-bazel-docker

./: BUILD.bazel  Dockerfile  README.md  WORKSPACE  cloudbuild.yaml  pom.xml
src/main/java/com/test/: TestApp.java
